# CS2-HealthShot-Drop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_config.ini  cs_healthshot_drop.cpp  cs_healthshot_drop.hpp
metadata/: version.h  version.in  version.rc  version_increment.bat
utils/: detour_manager.cpp  detour_manager.hpp  mem_utils.hpp
